--- a/localConfig.json
+++ b/localConfig.json
@@ -277,6 +277,8 @@
             "FeedbackMask"
         ],
         "desktop": ["Details",
+
+
           {
             "name": "Map",
             "cfg": {
@@ -319,12 +321,17 @@
             },
             {
                 "name": "Identify",
+              "disabledAlwaysOn": false,
                 "cfg": {
+                    "showInMapPopup": false,
+                    "disableCenterToMarker": false,
+                    "showMoreInfo": false,
                     "showHighlightFeatureButton": true,
                     "viewerOptions": {
                         "container": "{context.ReactSwipe}"
                     },
-                    "showEdit": true
+
+                    "showEdit": false
                 },
                 "override": {
                   "Toolbar": {
@@ -365,8 +372,8 @@
                       "legendOptions": {
                         "WMSLegendOptions": "forceLabels:on",
                         "scaleDependent": true,
-                        "legendWidth": 12,
-                        "legendHeight": 12
+                        "legendWidth": 18,
+                        "legendHeight": 18
                       }
                     }
                 }
